Fix variable in worker service files

--- a/ansible/roles/nlisim_worker/templates/services/celery.service.j2
+++ b/ansible/roles/nlisim_worker/templates/services/celery.service.j2
@@ -8,7 +8,7 @@ Group={{ ansible_user_id }}
 Environment=LC_ALL=C.UTF-8
 Environment=LANG=C.UTF-8
 Environment=CELERY_BROKER_URL={{ celery_broker_url }}
-ExecStart={{ girder_virtualenv }}/bin/celery \
+ExecStart={{ worker_virtualenv }}/bin/celery \
   worker \
   --app girder_nlisim.celery:app \
   --loglevel info
